[package]
name = "rc"
version = "0.1.0"
edition = "2024"
authors = ["Sergey Lyskov"]
description = "Command line tool to run various biomolecular structural prediction, analysis and design applications"

[features]
docker-tests = []
hpc-tests = []
native-tests = []
high-memory-tests = []
all = ["docker-tests", "hpc-tests", "native-tests", "high-memory-tests"]

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.51", features = ["derive"] }
home = "0.5.12"
paste = "1.0.15"
shell-escape = "0.1.5"
strum = { version = "0.27.2", features = ["derive"] }
which = "8.0.0"
yansi = "1.0.1"

[target.'cfg(unix)'.dependencies]
nix = { version ="0.31.1",default-features = false, features = ["user"] }

[dev-dependencies]
assert_cmd = { version = "2.1.1", features = ["color"] }
assert_fs = { version = "1.1.3", features = ["color"] }
predicates = "3.1.3"
reqwest = { version = "0.12.24", features = ["blocking"] }
serial_test = "3.2.0"

# [[test]]
# name = "docker-tests"
# path = "tests/docker.rs"
# required-features = ["docker-tests"]

[lints.rust]
rust-2024-compatibility = "warn"
# optionally, make them hard errors in CI:
# rust-2024-compatibility = "deny"

#![warn(rust_2018_idioms)]
rust-2018-idioms = "deny"

# missing-debug-implementations = "warn"

# [lints.clippy]
# all = "deny"
